--- a/razzeCanine/src/app/dati/dati.component.html
+++ b/razzeCanine/src/app/dati/dati.component.html
@@ -1,24 +1,32 @@
 <body class="m-2">
-    <h1>Prova Razze</h1>
-    <button *ngIf="vettoreDati.length==0" (click)="letturaDeiDati()" class="mb-2 btn btn-secondary">Clicca per
-        leggere</button>
-    <div *ngIf="vettoreDati!=null" class="w-auto container text-center">
+    <h1 class="text-center text-danger">Prova Razze</h1>
+    <div class="d-flex justify-content-center">
+        <button *ngIf="vettoreDati.length==0" (click)="letturaDeiDati()"
+            class="mb-2 btn btn-warning">Clicca per
+            leggere</button>
+    </div>
+    <p *ngIf="!datiPronti" class="d-flex justify-content-center ">{{stringa}}</p>
+    <div *ngIf="vettoreDati.length!=0 && datiPronti" class="w-auto container text-center">
         <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-2">
-            <div *ngFor="let dato of vettoreDati" class="col card text-center border-black mb-3">
-                <img [src]="dato.image_link" class="card-img-top img-fluid ">
+            <div *ngFor="let dato of vettoreDati" class="col card text-center border-black mb-3 bg-warning bg-opacity-50">
+                <img [src]="dato.image_link" class="card-img-top img-fluid rounded mt-1">
                 <div class="card-body container-fluid">
-                    <button class="btn btn-outline-secondary">{{dato.name}}</button>
+                    <button class="btn btn-outline-danger">{{dato.name}}</button>
                 </div>
             </div>
         </div>
     </div>
-    <p>{{stringa}}</p>
     <!--<img  [src]="vettoreDati[1].image_link">-->
 
-    <button *ngIf="numeroPg>0" (click)="paginaPrecedente()"
-        class="mb-2 btn btn-secondary ms-0">Pagina
-        precedente</button>
-    <button *ngIf="altreRazze" (click)="paginaSuccessiva()"
-        class="mb-2 btn btn-secondary me-0">Pagina
-        successiva</button>
+    <div *ngIf="datiPronti">
+        <div class="d-flex align-items-start flex-column">
+            <button *ngIf="numeroPg>0" (click)="paginaPrecedente()" class="mb-2 btn btn-secondary ms-0">Pagina
+                precedente</button>
+        </div>
+        <div class="d-flex align-items-end flex-column">
+            <button *ngIf="altreRazze" (click)="paginaSuccessiva()" class="mb-2 btn btn-secondary">Pagina
+                successiva</button>
+        </div>
+    </div>
+
 </body>
