--- a/razzeCanine/src/app/dati/dati.component.html
+++ b/razzeCanine/src/app/dati/dati.component.html
@@ -1,5 +1,5 @@
 <body class="m-2">
-    <h1 class="text-center text-danger">Prova Razze</h1>
+    <!--<h1 class="text-center text-danger">Prova Razze</h1>
     <div class="d-flex justify-content-center">
         <form>
         <input [(ngModel)]="ricerca" id="search" type="text" [ngModelOptions]="{standalone: true}">
@@ -7,13 +7,20 @@
             class="mb-2 btn btn-warning">Cerca</button>
         </form>
     </div>
-    <p *ngIf="!datiPronti" class="d-flex justify-content-center ">{{stringa}}</p>
+    <p *ngIf="!datiPronti" class="d-flex justify-content-center ">{{stringa}}</p>-->
+
+    <div>
+        <app-header (out)="ricerca($event)"></app-header>
+    </div> 
+
     <div *ngIf="vettoreDati.length!=0 && datiPronti" class="w-auto container text-center">
         <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-2">
-            <div *ngFor="let dato of vettoreDati" class="col card text-center border-black mb-3 bg-warning bg-opacity-50">
+            <div *ngFor="let dato of vettoreDati"
+                class="col card text-center border-black mb-3 bg-warning bg-opacity-50">
                 <img [src]="dato.image_link" class="card-img-top img-fluid rounded mt-1">
                 <div class="card-body container-fluid">
-                    <button routerLink="info" (click)="info(dato.name)"class="btn btn-outline-danger">{{dato.name}}</button>
+                    <button routerLink="info" (click)="info(dato.name)"
+                        class="btn btn-outline-danger">{{dato.name}}</button>
                     <!---->
                 </div>
             </div>
@@ -31,7 +38,4 @@
                 successiva</button>
         </div>
     </div>
-
-
-
 </body>
