commit per spostare

--- a/razzeCanine/src/app/dati/dati.component.html
+++ b/razzeCanine/src/app/dati/dati.component.html
@@ -28,7 +28,7 @@
             <button *ngIf="numeroPg>0" (click)="paginaPrecedente()" class="mb-2 btn btn-secondary ms-0">Pagina
                 precedente</button>
         </div>
-        <div class="flex-column me-5">
+        <div class="flex-column justify-content-center align-items-center">
             <button *ngIf="altreRazze" (click)="paginaSuccessiva()" class=" mb-2 btn btn-secondary">Pagina
                 successiva</button>
         </div>
