--- a/razzeCanine/src/app/dati/dati.component.html
+++ b/razzeCanine/src/app/dati/dati.component.html
@@ -1,22 +1,23 @@
 <body class="m-2">
-    <h1 class="text-center text-danger">Prova Razze</h1>
-    <div class="d-flex justify-content-center">
-        <form>
-        <input [(ngModel)]="ricerca" id="search" type="text" [ngModelOptions]="{standalone: true}">
-        <button routerLink="ricerca" (click)="letturaDeiDati()"
-            class="mb-2 btn btn-warning">Cerca</button>
-        </form>
-    </div>
+    <div class="bg-info bg-opacity-75 rounded">
+        <h1 class="text-center text-primary">Prova Razze</h1>
+        <div class="d-flex justify-content-center">
+            <form>
+                <input [(ngModel)]="ricerca" id="search" type="text" [ngModelOptions]="{standalone: true}" >
+                <button routerLink="ricerca" (click)="letturaDeiDati()" class="mb-2 btn btn-outline-primary">Cerca</button>
+            </form>
+        </div>
+    </div> 
     <p *ngIf="!datiPronti" class="d-flex justify-content-center ">{{stringa}}</p>
 
     <div *ngIf="vettoreDati.length!=0 && datiPronti" class="w-auto container text-center">
         <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-2">
             <div *ngFor="let dato of vettoreDati"
-                class="col card text-center border-black mb-3 bg-warning bg-opacity-50">
+                class="col card text-center border-black mb-3 bg-primary bg-opacity-50">
                 <img [src]="dato.image_link" class="card-img-top img-fluid rounded mt-1">
                 <div class="card-body container-fluid">
                     <button routerLink="info" (click)="info(dato.name)"
-                        class="btn btn-outline-danger">{{dato.name}}</button>
+                        class="btn btn-outline-primary">{{dato.name}}</button>
                 </div>
             </div>
         </div>
