--- a/razzeCanine/src/app/info/info.component.html
+++ b/razzeCanine/src/app/info/info.component.html
@@ -6,7 +6,7 @@
         <div>
             <div> <!--Img + nome-->
                 <div class="d-flex mb-2"> <!--Image + General-->
-                    <img src="{{dog.image_link}}" style="width: 49%" class="ms-1 img-fluid rounded border border-info">
+                    <img src="{{dog.image_link}}" (click)="apri()" id="immagine" style="width: 49%" class="ms-1 img-fluid rounded border border-info">
                     <div style="width:49%" class="container text-center border border-info rounded">
                         <div class="row">
                             <div class="col m-2">
@@ -56,74 +56,81 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex mb-2"> <!--Goodness-->
-                    <div class="container text-center border border-info rounded">
-                        <div class="row">
-                            <div class="col m-2">
-                                <h1>Goodness</h1>
+                <div *ngIf="login; else notLog">
+                    <div class="d-flex mb-2"> <!--Goodness-->
+                        <div class="container text-center border border-info rounded">
+                            <div class="row">
+                                <div class="col m-2">
+                                    <h1>Goodness</h1>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <p>Good with children: {{dog.good_with_children}}</p>
+                                </div>
+                                <div class="col">
+                                    <p>Good with other dogs: {{dog.good_with_other_dogs}}</p>
+                                </div>
+                                <div class="col">
+                                    <p>Good with strangers: {{dog.good_with_strangers}}</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col">
-                                <p>Good with children: {{dog.good_with_children}}</p>
+                    </div>
+                    <div class="d-flex mb-2"> <!--Weight e Height-->
+                        <div class="container text-center border border-info rounded" style="width: 49%">
+                            <div class="row">
+                                <div class="col m-2">
+                                    <h1>Weight</h1>
+                                </div>
                             </div>
-                            <div class="col">
-                                <p>Good with other dogs: {{dog.good_with_other_dogs}}</p>
+                            <div class="row">
+                                <div class="col">
+                                    <p>Min heigth male: {{dog.min_weight_male}}</p>
+                                </div>
+                                <div class="col">
+                                    <p>Max heigth male: {{dog.max_weight_male}}</p>
+                                </div>
                             </div>
-                            <div class="col">
-                                <p>Good with strangers: {{dog.good_with_strangers}}</p>
+                            <div class="row">
+                                <div class="col">
+                                    <p>Min heigth female: {{dog.min_weight_female}}</p>
+                                </div>
+                                <div class="col">
+                                    <p>Max heigth female: {{dog.max_weight_female}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container text-center border border-info rounded" style="width: 49%">
+                            <div class="row">
+                                <div class="col m-2">
+                                    <h1>Height</h1>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <p>Min height male: {{dog.min_height_male}}</p>
+                                </div>
+                                <div class="col">
+                                    <p>Max height male: {{dog.max_height_male}}</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <p>Min height female: {{dog.min_height_female}}</p>
+                                </div>
+                                <div class="col">
+                                    <p>Max height female: {{dog.max_height_female}}</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="d-flex mb-2"> <!--Weight e Height-->
-                    <div class="container text-center border border-info rounded" style="width: 49%">
-                        <div class="row">
-                            <div class="col m-2">
-                                <h1>Weight</h1>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <p>Min heigth male: {{dog.min_weight_male}}</p>
-                            </div>
-                            <div class="col">
-                                <p>Max heigth male: {{dog.max_weight_male}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <p>Min heigth female: {{dog.min_weight_female}}</p>
-                            </div>
-                            <div class="col">
-                                <p>Max heigth female: {{dog.max_weight_female}}</p>
-                            </div>
-                        </div>
+                <ng-template #notLog>
+                    <div class="container text-center border border-primary bg-primary bg-opacity-50 rounded p-5 mb-1">
+                        <h2 class="fst-italic">Log in to see more details</h2>
                     </div>
-                    <div class="container text-center border border-info rounded" style="width: 49%">
-                        <div class="row">
-                            <div class="col m-2">
-                                <h1>Height</h1>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <p>Min height male: {{dog.min_height_male}}</p>
-                            </div>
-                            <div class="col">
-                                <p>Max height male: {{dog.max_height_male}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <p>Min height female: {{dog.min_height_female}}</p>
-                            </div>
-                            <div class="col">
-                                <p>Max height female: {{dog.max_height_female}}</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                </ng-template>
             </div>
         </div>
     </div>
